@startuml

title __SRC's Class Diagram__\n

    class AudioFilePlayer {
        + play()
        - getOutFormat()
        - stream()
    }

  

    class Ball {
        {static} + BallID : int
        + HP : int
        + color : Color
        + dir_x : int
        + dir_y : int
        + id : int
        + level : int
        + width : int
        + x : int
        + y : int
        + Ball()
        + Ball()
        + Create_Random_Color()
        + HandleGroundHit()
        + IsCollision()
        + Make_start_movement()
        + Random_easy_HP()
        + SplitBall()
        + draw()
        + draw_bomb()
        + run()
    }




  

    class Cannon {
        + color : Color
        + high : int
        + i : Image
        + playerName : String
        + width : int
        + x : int
        + y : int
        + Cannon()
        + Cannon()
        + IsCollision()
        + IsCollisionBallDTO()
        + draw()
        + run()
    }

  


  


  


  

    class Fire {
        + color : Color
        + i : Image
        ~ size : int
        ~ x : int
        ~ y : int
        + Fire()
        + distance()
        + draw()
        + run()
    }

  




  

    class MainPanel {
        + IsFirst : boolean
        {static} + IsGameOver : boolean
        {static} + IsNewGameRequest : boolean
        {static} + IsPaused : boolean
        {static} + IsSinglePlayer : boolean
        + ball_list : List<Ball>
        + bg1 : Image
        + fire_list : List<Fire>
        {static} + r : Cannon
        + rocket_list : List<Rocket>
        + score : int
        + DrawFireBall()
        + MainPanel()
        + Random_easy_HP()
        + hideMouseCursor()
        + make_random_number()
        + paintComponent()
    }

  



  


    class MainPanel.ScoreTimer {
        ~ changeScore : ActionListener
        + ScoreTimer()
    }

  




  


  




  

    class program {
        {static} + connectionToServer : Socket
        {static} + decision : boolean
        {static} + f : JFrame
        {static} + inputStream : InputStream
        {static} + mp : MainPanel
        {static} + outputStream : OutputStream
        {static} + CreteFireSendList()
        {static} + InitializeGameFrame()
        {static} + InitializeMultiplayerMode()
        {static} + main()
    }

  





  Ball o-- MainPanel : panel
  Cannon o-- MainPanel : panel
  Fire o-- MainPanel : panel
  MainPanel +-down- MainPanel.ScoreTimer
  program +-down- program.Mp3Player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
